--- a/src/views/index.html
+++ b/src/views/index.html
@@ -8,86 +8,36 @@
         
         <!-- Masthead-->
         <header class="msthd">
-            <div id="carouselExampleControls" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                <div class="carousel-inner">
+            <div class="container-carousel ">
                     
-                  <div class="container-carousel carousel-item active">
-                    
-                    <img src="../assets/img/MCML-logo-sin-fondo-02.png" class="img-carousel" alt="...">
-                     
-                    
-                    <img src="../assets/img/cr-1.jpg" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="../assets/img/cr-2.jpg" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="../assets/img/cr-3.jpg" class="d-block w-100" alt="...">
-                  </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
+                <img src="../assets/img/MCML-logo-sin-fondo-02.png" class="animate__animated animate__fadeIn img-carousel" alt="...">
+                 <h1 class="titulo">Mauricio Camarena Muñoz Ledo</h1>
+                <h5>Organizador de eventos</h5>
+                <img src="../assets/img/cr-1.jpg" class=" d-block w-100" alt="...">
               </div>
+            
         </header>
         <!-- Icons Grid-->
         <a name="servicios"></a>
-        <section class="features-icons bg-light text-center">
-           
-                <div class="container">
+        <section class="features-icons bg-light text-center" style="padding-top: 3.5rem; padding-bottom: 3.5rem;">
+           <h1 class="titulo bounce">Conoce nuestros servicios</h1>
+           <h6>Da clic sobre alguna categoría para saber más</h6>
+                <div class="container" style="margin-top: 1rem; margin-bottom: 2rem;">
                     <div class="row row-cols-3">
-                      <div class="img-hover-zoom col g-3"><img src="assets/img-servicios/img-servicios-boda.jpg" class="img-fluid" alt=""><p>Bodas</p></div>
-                      <div class="img-hover-zoom col g-3"><img src="assets/img-servicios/img-servicios-fiesta.jpg" class="img-fluid" alt=""><p>Fiestas</p></div>
-                      <div class="img-hover-zoom col g-3"><img src="assets/img-servicios/img-servicios-cumpleanos.jpg" class="img-fluid" alt=""><p>Cumpleaños</p></div>
-                      <div class="img-hover-zoom col g-3"><img src="assets/img-servicios/img-servicios-empresarial.jpg" class="img-fluid" alt=""><p>Empresariales</p></div>
-                      <div class="img-hover-zoom col g-3"><img src="assets/img-servicios/img-servicios-graduacion.jpg" class="img-fluid" alt=""><p>Graduaciones</p></div>
-                      <div class="img-hover-zoom col g-3"><img src="assets/img-servicios/img-servicios-bautizo.jpg" class="img-fluid" alt=""><p>Bautizos</p></div>
+                      <div class="img-hover-zoom col g-3"><img src="assets/img-servicios/img-servicios-boda.jpg" class="img-fluid" alt=""><p class="titulo">Bodas</p></div>
+                      <div class="img-hover-zoom col g-3"><img src="assets/img-servicios/img-servicios-fiesta.jpg" class="img-fluid" alt=""><p class="titulo">Fiestas</p></div>
+                      <div class="img-hover-zoom col g-3"><img src="assets/img-servicios/img-servicios-cumpleanos.jpg" class="img-fluid" alt=""><p class="titulo">Cumpleaños</p></div>
+                      <div class="img-hover-zoom col g-3"><img src="assets/img-servicios/img-servicios-empresarial.jpg" class="img-fluid" alt=""><p class="titulo">Empresariales</p></div>
+                      <div class="img-hover-zoom col g-3"><img src="assets/img-servicios/img-servicios-graduacion.jpg" class="img-fluid" alt=""><p class="titulo">Graduaciones</p></div>
+                      <div class="img-hover-zoom col g-3"><img src="assets/img-servicios/img-servicios-bautizo.jpg" class="img-fluid" alt=""><p class="titulo">Bautizos</p></div>
                     </div>
                   </div>
-                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                            
-                            
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                            
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="features-icons-item mx-auto mb-0 mb-lg-3">
-                            
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                            
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                            
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="features-icons-item mx-auto mb-0 mb-lg-3">
-                            
-                        </div>
-                    </div>
-                </div>
-                <h3>Date una idea de cuánto costaría tu evento</h3>
-                <button type="button" class="btnserviciomodal btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal3">
-                    Cotizar
+                
+                
+                <button type="button" class="btnserviciomodal btn btn-primary" style="margin-top: 1rem; margin-bottom: 1rem;" data-bs-toggle="modal" data-bs-target="#exampleModal3">
+                    Cotiza tu evento
                 </button>
+                <h6>Recuerda que es un aproximado</h6>
            
         </section>
         <!-- Image Showcases-->
@@ -96,21 +46,21 @@
                 <div class="row g-0">
                     <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/ns-1.jpg')"></div>
                     <div class="TNI col-lg-6 order-lg-1 my-auto showcase-text">
-                        <h2>Fully Responsive Design</h2>
+                        <h2 class="titulo">Fully Responsive Design</h2>
                         <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
                     </div>
                 </div>
                 <div class="row g-0">
                     <div class="col-lg-6 text-white showcase-img" style="background-image: url('assets/img/ns-3.jpg')"></div>
                     <div class="TND col-lg-6 my-auto showcase-text">
-                        <h2>Updated For Bootstrap 5</h2>
+                        <h2 class="titulo">Updated For Bootstrap 5</h2>
                         <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 5 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 5!</p>
                     </div>
                 </div>
                 <div class="row g-0">
                     <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/ns-2.jpg')"></div>
                     <div class="TNI col-lg-6 order-lg-1 my-auto showcase-text">
-                        <h2>Easy to Use & Customize</h2>
+                        <h2 class="titulo">Easy to Use & Customize</h2>
                         <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
                     </div>
                 </div>
@@ -119,25 +69,25 @@
         <!-- Testimonials-->
         <section class="testimonials text-center bg-light">
             <div class="container">
-                <h2 class="mb-5">Nuestro equipo</h2>
+                <h2 class="mb-5 titulo bounce">Nuestro equipo</h2>
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="animate__animated animate__bounceIn img-fluid rounded-circle mb-3" src="assets/img/testimonials-1.jpg" alt="..." />
+                            <img class="img-equipo img-fluid rounded-circle mb-3" src="assets/img/testimonials-1.jpg" alt="..." />
                             <h5>Margaret E.</h5>
                             <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="animate__animated animate__bounceIn img-fluid rounded-circle mb-3" src="assets/img/testimonials-2.jpg" alt="..." />
+                            <img class="img-equipo img-fluid rounded-circle mb-3" src="assets/img/testimonials-2.jpg" alt="..." />
                             <h5>Fred S.</h5>
                             <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="animate__animated animate__bounceIn img-fluid rounded-circle mb-3" src="assets/img/testimonials-3.jpg" alt="..." />
+                            <img class="img-equipo img-fluid rounded-circle mb-3" src="assets/img/testimonials-3.jpg" alt="..." />
                             <h5>Sarah W.</h5>
                             <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p>
                         </div>
@@ -148,9 +98,10 @@
         <!-- CONTACTO-->
         <section style="margin-top:3em; margin-bottom:3em;">
             <div class="container">
-                <h1>Contacto</h1>
+                <h1 class="titulo bounce">Contacto</h1>
+                <h6>Estamos al alcance de tu dedo</h6>
                 <!--Google map-->
-                    <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
+                    <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px; margin-top:2rem;">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3722.179204804117!2d-101.5859835856601!3d21.105420490534012!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842bbdbc997e0083%3A0x3021bd8249050b9b!2sAv%20Constelaciones%20de%20San%20Juan%20811%2C%20Villas%20de%20San%20Juan%2C%20Le%C3%B3n%2C%20Gto.!5e0!3m2!1ses-419!2smx!4v1650421941533!5m2!1ses-419!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         style="border:0" allowfullscreen></iframe>
                         
@@ -159,10 +110,11 @@
                 <!--Google Maps-->
             </div>
             <section class="clearfix" style="--bs-bg-opacity: 1; background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity)) !important; margin-top: 2em; padding: 1em;">
-                 <div class="float-right" >
-                    <p><i class="bi bi-geo-alt-fill" style="font-size: 2rem; margin-right: 0.5rem;"></i>Constelaciones de San Juan 811-A, León de los Aldama, Guanajuato, México</p>
-                    <p><i class="bi bi-telephone-fill" style="font-size: 2rem; margin-right: 1rem;"></i>477-703-68-10</p>
-                    <p><i class="bi bi-envelope-fill" style="font-size: 2rem; margin-right: 1rem;"></i>mauricio.camarena05@gmail.com</p>
+                 <div style="padding-left: 2rem;">
+                     <div class="TNI"><p><i class="bi bi-geo-alt-fill" style="font-size: 2rem; margin-right: 0.5rem;"></i>Constelaciones de San Juan 811-A, León de los Aldama, Guanajuato, México</p></div>
+                     <div class="TNI"><p><i class="bi bi-telephone-fill" style="font-size: 2rem; margin-right: 1rem;"></i>477-703-68-10</p></div>
+                     <div class="TNI"><p><i class="bi bi-envelope-fill" style="font-size: 2rem; margin-right: 1rem;"></i>mauricio.camarena05@gmail.com</p></div>
+                    
                  </div>
                     
                 
@@ -172,14 +124,14 @@
         <!--DEJA UN COMENTARIO-->
         <section style="margin-top:3em; margin-bottom:3em;">
             <div class="container">
-                <h1>Tu opinión es muy importante</h1>
+                <h1 class="titulo bounce">Tu opinión es muy importante</h1>
                 <h6>Mira algunos comentarios que nos han hecho</h6>
                 <div class="container" style="padding: 1rem;">
                     <div id="comentario-container" name="comentario-container" class="carousel slide" data-bs-ride="carousel"></div>
                 </div>
                 
-                <h5>¿Te gustaría dejarnos un comentario?</h5>
-                <button type="button" class="btnserviciomodal btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal-comentario">
+                <h5 style="margin-top:2rem;">¿Te gustaría dejarnos un comentario?</h5>
+                <button type="button" class="btnserviciomodal btn btn-primary" style="margin-top: 1rem;" data-bs-toggle="modal" data-bs-target="#modal-comentario">
                     Escribir comentario
                 </button>
           
